@@ -181,13 +181,13 @@
    </para>
 !Itapset/socket.stp
   </chapter>
-  <chapter id="process.stp">
-    <title>Process Tapset</title>
+  <chapter id="kprocess.stp">
+    <title>Kernel Process Tapset</title>
     <para>
       This family of probe points is used to probe process-related activities.
       It contains the following probe points:
     </para>
-!Itapset/process.stp
+!Itapset/kprocess.stp
   </chapter>
   <chapter id="signal.stp">
     <title>Signal Tapset</title>
